--- a/Lecture_1/code/Penguins.Rmd
+++ b/Lecture_1/code/Penguins.Rmd
@@ -29,6 +29,8 @@ This error message means that you did not install the package `palmerpenguins`. 
 
 ```{r}
 # Your code here
+library(palmerpenguins)
+library(tidyverse)
 
 ```
 
@@ -66,7 +68,7 @@ The dataset contains 8 variables about 344 individual penguins. If you want to k
 
 ```{r}
 # Your code here to explore the penguins dataset
-
+?penguins
 ```
 
 
@@ -85,8 +87,8 @@ we get rid of the NA's. You should recognize the "pipe operator" `%>%` from the 
 
 ```{r}
 
-# Your code here
-
+penguins <- penguins %>%
+  na.omit
 ```
 
 
@@ -150,7 +152,7 @@ In that case we can plot the data as a scatterplot (`geom_point()`)with
 
 ```{r}
 # Here your code
-
+ggplot()+geom_point(data = penguins, aes(x=flipper_length_mm, y=bill_length_mm))
 ```
 
 
@@ -166,6 +168,7 @@ We could experiment a bit with adding colors and shapes to this plot by trying t
 ```{r}
 
 # Here your code
+ggplot()+geom_point(data = penguins, aes(x=flipper_length_mm, y=bill_length_mm), color="red", size=3, shape=1)
 
 
 ```
@@ -181,6 +184,7 @@ It seems that there is a positive correlation between flipper length and bill le
 
 ```{r}
 # Here your code
+ggplot()+geom_point(data = penguins, aes(x=flipper_length_mm, y=bill_length_mm, color=species, shape=sex))
 
 ```
 
@@ -202,7 +206,7 @@ Finally,  we can add a theme (you can find some examples at https://ggplot2.tidy
 ```{r}
 
 # Here your code
-
+ggplot()+geom_point(data = penguins, aes(x=flipper_length_mm, y=bill_length_mm, color=species, shape=sex))+labs(title="My penguins", subtitle="plot by Joost Haddinga")+xlab("Flipper length")+ylab("Bill length")
 ```
 
 
@@ -231,7 +235,7 @@ We can split the plots per island by using for example
 
 ```{r}
 # Here your code
-
+ggplot()+geom_boxplot(data=penguins, aes(x=species, y=body_mass_g, fill=sex))+ylab("body mass in grams")+facet_wrap(~island)
 
 ```
 
@@ -255,6 +259,7 @@ _hint_: Why does scale_color_manual not work?
 
 ```{r}
 # Here your code
+ggplot()+geom_boxplot(data=penguins, aes(x=species, y=body_mass_g, fill=sex))+ylab("body mass in grams")+facet_wrap(~island)+scale_fill_manual(values=c("#0000CD", "#DA291C"))
 
 
 ```
