--- a/Lecture_1/code/Reading_data.Rmd
+++ b/Lecture_1/code/Reading_data.Rmd
@@ -13,7 +13,8 @@ We need a package to read in the excel files. I tend to make a Package section i
 
 ```{r}
 # Here your code
-
+library(tidyverse)
+library(readxl)
 
 ```
 
@@ -66,7 +67,7 @@ Assignment: read in the file "voetbal.csv" from the folder sourcedata and call t
 
 ```{r}
 # Here your code
-
+football <- read.csv2("/Users/JoostHaddinga_1/Desktop/University/SemesterII/Programming/R_Lectures/Rprogramming21_student/Lecture_1/sourcedata/voetbal.csv")
 
 ```
 
@@ -78,7 +79,7 @@ By typing `football` we can view the data. Try to view the data.
 
 ```{r}
 # Here your code
-
+football
 
 ```
 
@@ -90,7 +91,7 @@ To just get an impression of the data frame we could either use `head(name of th
 
 ```{r}
 # Here your code
-
+head(football)
 
 ```
 
@@ -98,7 +99,7 @@ To just get an impression of the data frame we could either use `head(name of th
 ```{r}
 # Here your code
 
-
+tail(football)
 
 ```
 
@@ -114,7 +115,7 @@ Try to read in the `N1.csv` as done above and call the dataframe football1 (we h
 
 ```{r}
 # Here your code
-
+football1 <-read.csv2("/Users/JoostHaddinga_1/Desktop/University/SemesterII/Programming/R_Lectures/Rprogramming21_student/Lecture_1/sourcedata/N1.csv")
 
 ```
 
@@ -127,7 +128,7 @@ And have a look at the data with `head(football1)`
 
 # Here your code
 
-
+head(football1)
 
 ```
 
@@ -155,6 +156,7 @@ and view the data if it looks correct.
 
 ```{r}
 # Here your code
+football2 <-read.csv2("/Users/JoostHaddinga_1/Desktop/University/SemesterII/Programming/R_Lectures/Rprogramming21_student/Lecture_1/sourcedata/N1.csv", sep=",")
 
 
 ```
@@ -163,7 +165,7 @@ and view the data if it looks correct.
 ```{r}
 # Here your code
 
-
+head(football2)
 ```
 
 
@@ -179,7 +181,7 @@ Try to google how to read in the excel file *football.xlsx* in the folder source
 
 ```{r}
 # Here your code
-
+football_points <- read_excel("/Users/JoostHaddinga_1/Desktop/University/SemesterII/Programming/R_Lectures/Rprogramming21_student/Lecture_1/sourcedata/football.xlsx")
 ```
 
 
@@ -190,7 +192,7 @@ Looking at the data, we see that the _Excel_ sheet is read in to a dataframe inc
 
 ```{r}
 # Here your code
-
+football_points <- read_excel("/Users/JoostHaddinga_1/Desktop/University/SemesterII/Programming/R_Lectures/Rprogramming21_student/Lecture_1/sourcedata/football.xlsx", skip = 3)
 
 ```
 
@@ -239,7 +241,7 @@ First, read in *gender.csv* from the folder *sourcedata* as a dataframe with the
 
 ```{r}
 # Here your code
-
+gender = read.csv2("/Users/JoostHaddinga_1/Desktop/University/SemesterII/Programming/R_Lectures/Rprogramming21_student/Lecture_1/sourcedata/gender.csv")
 ```
 
 
@@ -248,7 +250,7 @@ and then check the structure of the dataframe `gender`
 
 ```{r}
 # Here your code
-
+str(gender)
 ```
 
 
@@ -278,7 +280,7 @@ By using `str()` again we can check if we succeeded:
 
 ```{r}
 # Here your code
-
+str(gender)
 
 ```
 
@@ -296,12 +298,12 @@ and then check the structure of your data and view the data
 
 ```{r}
 # Here your code
-
+gender$Number1 <- as.numeric(gender$Number)
 ```
 
 ```{r}
 # Here your code
-
+str(gender)
 
 ```
 
@@ -324,7 +326,9 @@ With the command `summary(name_dataframe)`, you will get a summary of your datas
 
 Show the summary of the football dataframe
 
-
+```{r}
+summary(football)
+```
 End of Notebook
 
 
